# rtd_test1

./: .gitignore  .readthedocs.yaml  LICENSE  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
docs/source/locales/ja/LC_MESSAGES/: index.mo  index.po  pages.mo  pages.po
docs/source/pages/: page1.rst
example/: main.py
mathlib/: __init__.py  mathlib.py
mathlib/tests/: test_arithmetic.py
