[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mathlib"
authors = [{name = "Lefu777", email = "hoge@fuga.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

# TODO: test動かしたい。
dependencies = [
    "pytest",
    "sphinx",
]
